--- a/view/theme/frio/css/font-awesome.custom.css
+++ b/view/theme/frio/css/font-awesome.custom.css
@@ -5,7 +5,7 @@
 
 .icon:before {
     font-family: FontAwesome;
-    font-weight: normal;
+    font-weight: 900;
     font-style: normal;
     display: inline-block;
     text-decoration: inherit;
