--- a/view/theme/frio/scheme/less.css
+++ b/view/theme/frio/scheme/less.css
@@ -4,18 +4,31 @@
     Created on : 16.08.2019, 00:13:06
     Author     : vinzv
 */
+body.mod- {
+    background-image: linear-gradient(to right, rgba(0,0,0, 0.7) , rgba(0,0,0, 0.4)), url(scheme/less.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: auto;
+}
 
 header #banner #logo-img,
 .navbar-brand #logo-img {
     -webkit-mask-image: url('scheme/less-25.png');
 }
 
-.mod-home.is-not-singleuser nav.navbar, .mod-login nav.navbar {
-    background-image: unset;
+nav.navbar, .mod-login nav.navbar, .mod- nav.navbar {
+    background: unset !important;
+}
+
+body.mod- #topbar-second {
+    background-color: unset;
+    box-shadow: unset;
+    border-bottom: unset;
 }
 
 #topbar-first, .navbar {
-    background-image: linear-gradient(to right, $navbg_left 0%, $navbg_middle 51%, $navbg_right 100%);	
+    background-image: linear-gradient(to right, $navbg_left 0%, $navbg_middle 51%, $navbg_right 100%);
 }
 
 /*#topbar-first .dropdown.account > a, #topbar-first .dropdown.account.open > a, #topbar-first .dropdown.account > button, #topbar-first .dropdown.account.open > button, #topbar-first .dropdown.account > button:hover {
@@ -240,10 +253,10 @@ header #banner #logo-img,
   .panel .panel-body .wall-item-content {
 	  color: #eee;
   }
-  .mod-home.is-not-singleuser .login-form > #login-form, .mod-home.is-not-singleuser .login-form > #login-extra-links {
+  #login-form, .login-form > #login-extra-links {
 	  background-color: #24292d !important;
   }
-  .mod-home.is-not-singleuser .login-content, .mod-login .login-content, .mod-home.is-not-singleuser .login-form > #login-form label {
+  .mod-home .login-content, .mod-login .login-content, .mod-home.is-not-singleuser .login-form > #login-form label {
 	  color: #a2b0b9 !important;
   }
   .form-control, input[type="checkbox"] {
